corrected my usage of static l18n strings.
(bzr r3518)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-20  Kees Cook  <kees@outflux.net>
+
+    * src/dialogs/desktop-preferences.cpp: corrected my usage of static
+	  l18n strings.
+
 2004-07-18  MenTaLguY  <mental@rydia.net>
 
 	* configure.in, src/Makefile.am, src/algorithms/Makefile_insert,
