More static l18n strings fixed.
(bzr r3520)

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
     * src/dialogs/desktop-preferences.cpp: corrected my usage of static
 	  l18n strings.
     * src/dialogs/stroke-style.cpp: fixed missing l18n. (bug #994837)
+    * src/dialogs/sp-attribute-widget.cpp: went hunting for other static
+      l18n strings.  Fixed some here too.
 
 2004-07-18  MenTaLguY  <mental@rydia.net>
 
