Crazy command execution output filtering
(bzr r3523)

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
     * src/dialogs/stroke-style.cpp: fixed missing l18n. (bug #994837)
     * src/dialogs/sp-attribute-widget.cpp: went hunting for other static
       l18n strings.  Fixed some here too.
+	* autogen.sh: cleanups and more debugging.
 
 2004-07-18  MenTaLguY  <mental@rydia.net>
 
