--- a/debian/changelog
+++ b/debian/changelog
@@ -1,19 +1,11 @@
-inkscape (0.40cvs) unstable; urgency=low
+inkscape (0.39+cvs) unstable; urgency=low
 
-  * CVS package
+  * Reduce differences from wolfi's official Debian package.
 
- -- Nathan Hurst <njh@mail.csse.monash.edu.au>  Tue, 20 Jul 2004 17:24:55 +1100
+      + Greatly-trimmed changelog entries.
+      + Sort build-depends.
 
-inkscape (0.39) unstable; urgency=high
-
-  * Pango: smoother text display, auto kerning, better i18n (automatic font substitution, right-to-left text, bi-directional text), less platform dependence
-  * New SVG features: markers (aka arrowheads), clones (svg:use), pattern tiles, RDF metadata; many SVG compliance bugfixes
-  * New dialogs: Preferences, Find, Metadata
-  * Pure convenience: usable dropper, scale switches, Commands bar, more tool controls (including rounded stars), more import formats, more paper sizes, Revert command, edit inside group, better selection cues, spell checking, window layout configurable, streamlined Fill & Stroke, snapping improvements, better rounded corners in rects, path reversing, persistent rotation crosshair, per-object export hints, and much more
-  * Internals: speedups, more C++ification, garbage collection, SigC++ signals, wider use of new data structures, extensive cleanup
-  * Plus: new documentation, new translations, lots of assorted bugfixes 
-
- -- Nathan Hurst <njh@mail.csse.monash.edu.au>  Tue, 20 Jul 2004 17:12:55 +1100
+ -- Peter Moulder <pmoulder@mail.csse.monash.edu.au>  Tue, 27 Jul 2004 22:05:07 +1000
 
 inkscape (0.39cvs) unstable; urgency=low
 
@@ -21,143 +13,164 @@ inkscape (0.39cvs) unstable; urgency=low
 
  -- Kees Cook <kees@outflux.net>  Thu, 15 Apr 2004 12:45:00 -0700
 
-inkscape (0.38) unstable; urgency=high
+inkscape (0.39) unstable; urgency=low
 
-  *  Text and fonts: full kerning and spacing support, better installed font detection, better alternate font matching, better usability
-  * Path operations: new commands to cut paths, less distortions, better usability
-  * Gradients: full support for multi-stop gradients, bugfixes
-  * Shape tools: polygons, dramatically better usability with the top panel, bugfixes
-  * Libinkjar: a library for compound document support of packaged SVG and PNG files
-  * Pure usability: canvas autoscrolling, accelerated scrolling, inversion for visibility, more intuitive cut-and-paste, per-object selection indication, save dialog, new icons
-  * Paraphernalia: new and expanded tutorials, clipart, translation updates 
+  * New upstream version:
 
-  * * New functionality
+      + New SVG features: markers (aka arrowheads), clones (svg:use),
+        mostly-complete support for pattern tiles.
+      + Pango: better text appearance
+      + New dialogs: Preferences, Find, RDF Metadata
+      + New documentation, new translations
 
-  * There's a complete support for horizontal and vertical kerning in text objects (the dx and dy attributes in SVG). Text objects with kerns remain fully editable.
-  * New boolean operations: Division (Ctrl+/), when applied to two objects, cuts the bottom object into pieces along the edges of the top object; Cut Path (Ctrl+Alt+/) is similar, but only cuts the stroke of the bottom object (convenient for cutting paths without fill).
-  * Multi-stop gradients are now fully supported: the redesigned gradient editor can add, delete, move, and set color/alpha for an arbitrary number of stops in a gradient.
-  * The star tool now has a polygon mode which generates true polygons instead of stars with flat points, so that you don't get extra points when you convert to path.
-  * There is a new library, libinkjar, which can read [OpenOffice] .sxw (and some .jar) files. This allows you to bundle a bunch of SVGs and embedded files like .png for viewing in inkscape or inkview. This is work in progress. 
+    See NEWS for a longer list.
 
-  * * Important bugfixes
+ -- Peter Moulder <pmoulder@mail.csse.monash.edu.au>  Sun, 18 Jul 2004 11:14:09 +1000
 
-  * Inkscape's font support is cleaned up and improved. More installed fonts than before are now seen, displayed, and correctly applied. Font matcher is more intelligent yet faster and supports generic families and multiple family specifications, so bad font substitutions are now rare. Besides, Inkscape will warn you whenever it cannot find the exact match for the family or style requested by the document.
-  * The new polygon intersector code fixed a number of ugly rendering screw-ups and lock-ups.
-  * Previously, Inkscape canvas tended to "stick" after mouse release when you were panning a complex document by middle mouse button. This is now fixed.
-  * Non-ASCII filenames (e.g. Cyrillic) are fully supported for all file operations (opening, saving, importing, exporting).
-  * Problems on localized Windows systems caused by the wrong numeric format (comma as decimal separator in SVG) are resolved.
-  * The show/hide guidelines toggle (the | key) is restored and fully functional.
-  * The Inset and Outset commands create paths with much smaller distortions than before.
-  * A newly created group, or a combined path, now remains at the level of its topmost member, instead of jumping to the top as before. Several other commands are also fixed to preserve the z-order and the parent of the object(s) they work on.
-  * Copy/paste of objects with gradients now works between documents.
-  * The bounding box of an object now includes stroke width (this fixes the truncated bitmap export and some other problems).
-  * Several bugfixes were ported from Sodipodi; notably, the font size mismatch between Windows and Unix is now gone. 
+inkscape (0.38.1+0.39pre4-1) unstable; urgency=low
 
-  * * Interface and usability
+  * New upstream version
+  * upload sponsored by Guido Guenther <agx@debian.org>
 
-  * Complete spacing/kerning control via keyboard in the text tool: when editing, Alt+< and Alt+> adjust letter spacing in the current line, Ctrl+Alt+< and Ctrl+Alt+> adjust spacing between lines, and Alt+arrows shift any character horizontally or vertically.
-  * In text tool, clicking on a text object positions the cursor closest to the click, instead of at the end of the text object as before.
-  * Node tool, text tool, and all shape tools now select objects regardless of grouping. This means you don't need to switch to selector for a Ctrl+click if you want to edit a grouped text object, path, or shape.
-  * The shape tools (Rectangle, Ellipse, Star, and Spiral) are vastly more convenient to use:
-  *       o All controls, such as the number of sides of a polygon, are moved from the "Tool Options" dialog to the editing window's top panel and are immediately accessible.
-  *       o The top panel controls affect (any number of) the selected object(s) of the relevant type, not only the next created object as was the case with "Tool Options".
-  *       o When you have any of the shape tools activated, the selected object now displays editing handles on the canvas, just like it did in the node tool before. This means you can draw a shape and edit it immediately, without switching to node tool.
-  *       o You can now select objects by clicking (regardless of grouping), or deselect by Esc, while in a shape tool.
-  *       o There's a two-way connection between the selected object and the top panel: dragging handles updates the relevant top panel controls, and editing the controls moves the handles. 
-  * The Paste command (Ctrl+V) now places the pasted objects(s) right under the mouse cursor. The old behavior - pasting to the original location - is available as the Paste In Place command (Crtl+Alt+V).
-  * The Raise and Lower commands reorder the selected objects only relative to those objects that overlap them, instead of all objects in the document.
-  * Autoscrolling: The canvas now scrolls automatically when you drag an object or node, or do a rubberband selection, and go near or beyond the edge of the canvas. Similarly, autoscrolling keeps the text cursor always visible.
-  * Accelerated scrolling: if you press and hold Ctrl+arrow to scroll canvas, Inkscape will gradually speed up scrolling. This makes navigating in complex documents much faster, without losing precision.
-  * Accelerated Simplify: similar to scrolling, a single Simplify (Ctrl+L) does a slight simplification, but invoking it several times in quick succession makes it act more and more aggressively on the selected objects. It is thus easy to apply the exact amount of simplification you need for each case.
-  * Scale/selection handles and the rubberband selection rectangle now use inversion and are therefore visible on any background. (Even 50% gray... our inversion is smart :-) Path nodes and node/shape controls also use inverted elements for better visibility. Text editing cursor is also inverse.
-  * In multi-object selections, every selected object now displays a small inverse diamond mark in the top left corner of its bounding box. This lets you see at once what objects are selected and what are not.
-  * In the linear and radial gradient panes of the Fill and Stroke dialog:
-  *       o You can press Ctrl while dragging handles to snap the linear gradient angle to 15 degrees increments (makes it easy to create strictly horizontal/vertical gradients).
-  *       o The handles, bounding box, and gradient axes use inversion for better visibility.
-  *       o The default linear gradient goes through the center of the object.
-  *       o The radial gradient displays a radius handle for adjusting the gradient radius. 
-  * The save dialog now remembers output format, can append file extension automatically, and warns when overwriting files. You can now save a file in Postscript format.
-  * Many new icons are added, and many old icons are redrawn to be crisper, more informative, and more laconic. 
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Tue, 13 Jul 2004 17:32:39 +0200
 
-  * * Clipart, documentation, translations
+inkscape (0.38.1+0.39pre3-1) unstable; urgency=low
 
-  * Inkscape now ships with a small collection of clipart (when it grows big enough we may separate it into a package of its own).
-  * The Inkscape tutorial is split into two parts, Basic and Advanced, and significantly expanded (new sections on offsets, simplification, compound paths, text tool, and more).
-  * Two new tutorials,"Elements of design" and "Tips and Tricks," are added.
-  * The Basic tutorial is available in Russian translation.
-  * French, Hungarian, Japanese, Russian, and Spanish interface translations are updated. 
+  * New upstream version
+  * This is upstream version 0.39pre3. The versioning of debian is to make
+    sure the final version 0.39 is greater than this pre-Versions
+  * removed "Conflicts: inkscape-cvs" and "Provides: inkscape" from debian/control
+    because the regular inkscape package should be installable parallel to
+    inkscape-cvs (if I ever have time to create this one)
+  * added "Suggests: sketch" to debian/control because inkscape can use sketch
+    to export eps.
 
- -- Nathan Hurst <njh@mail.csse.monash.edu.au>  Fri, 9 Apr 2004 19:17:00 +1100
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Fri,  9 Jul 2004 00:24:02 +0200
 
-inkscape (0.37) unstable; urgency=high
+inkscape (0.38.1-4) unstable; urgency=low
 
-  * Boolean operations on shapes are now implemented: union, difference, intersection, and exclusive OR (XOR).
-  * Paths can be inset or outset (i.e., contracted or expanded orthogonally to the path in each point). You can do simple inset/outset of a path, or you can create a dynamic offset object that you can adjust interactively using the node tool. Moreover, a dynamic offset object can be linked to its original path so that editing the path will have the offset updated automatically.
-  * A stroke can now be converted to a closed path (i.e. outlined, taking into account stroke width).
-  * A standalone SVG viewer is now available, which can be used as a slideshow viewer. Just type inkview *.svg; see http://www.inkscape.org/cgi-bin/wiki.pl?Inkview for details.
-  * You can now drag SVG files from Konqueror (and probably other KDE apps, too) to Inkscape. And when The Gimp gets full support for path drag-and-drop, we'll be able to accept drops from them, too.
-  * The Document Options dialog now lets you change the background and border colors of a document, with the background color also used for bitmap exports - which means you can easily produce PNGs with non-transparent background.
-  * Support for the letter-spacing CSS property is implemented. Press Alt+< or Alt+> when editing text to adjust the letterspacing of the current line.
-  * The Help menu contains a new interactive tutorial for beginner users of Inkscape and a complete Keys and Mouse reference in SVG (see an HTML version at http://inkscape.org/doc/keys.html). 
+  * added link to the inkscape homepage to debian/control
+  * added "Conflicts: inkscape-cvs" and "Provides: inkscape" to debian/control
+    to ensure proper handling of the new inkscape-cvs package
+  * upload sponsored by Guido Guenther <agx@debian.org>
 
-  * Complete keyboard control in selector and node tool: now you can not only select and move objects/nodes with keyboard, but also rotate them by [] keys and scale by <> keys, with various modifiers. For nodes, rotating and scaling is applied to the control handles of all selected nodes.
-  * The top panel for selector tool provides editable fields for the coordinates, width, and height of the selection. Press Alt+X to access the panel via keyboard.
-  * Maximum zoom was upped from 32x to 256x, which was possible by increasing the coordinate precision used by the program and stored in SVG.
-  * A new color widget on the Fill and Stroke dialog allows you to select between RGB, CMYK, HSV sliders or an HSV color wheel (resize the dialog if you want the wheel to grow larger). Also in that dialog, editing gradients is now easier, as you can drag the control points of linear and radial gradients.
-  * Many new keyboard+mouse modes make mousework a lot more convenient. In selector and node tool, as well as in pen, spiral, and star tools, rotating objects or control handles of a node with Ctrl restricts rotation to 15 degree increments. Dragging nodes may be restricted to horizontal/vertical (with Ctrl) and to the directions of the node's handles (with Ctrl+Alt). Dragging a node's control points with Alt locks the length of the handle, and with Shift, rotates the other handle by the same angle.
-  * In selector, Ctrl+click and Ctrl+Shift+click select objects within groups.
-  * In node tool, Ctrl+click toggles cusp/smooth/symmetric, Ctrl+Alt+click deletes a node.
-  * Previously in selector, mouse dragging from an empty spot started rubberband selection, while dragging from an object moved that object. Now you can press Shift and Inkscape will start rubberband from any spot, object or not. This makes selecting in complex drawings more convenient. 
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Thu, 10 Jun 2004 16:13:35 +0200
 
-  * When you save a document, Inkscape now remembers the zoom level and the center of view and restores them on load, so you'll be looking at exactly the same point at the same magnification as the last time you saved the document. Optionally, it also saves window size and position for each document and restores them on load. Moreover, Inkscape can read the view template from the preferences to set the zoom level, window geometry, grid settings, and guides in all new documents.
-  * More helpful statusbar display: default hints for all tools, explanations for most non-fatal errors, visual feedback for non-trivial actions (such as Unicode mode in text tool), the number and type of selected nodes in node tool, the font face and size for text objects.
-  * Ctrl+Tab and Shift+Ctrl+Tab cycle forward and backward through the document windows of the program.
-  * Inkscape now preserves the history of zoom settings for each document. The ` key restores previous zoom; pressing ` repeatedly will guide you through all the zoom settings you've used in this session. Shift+` moves forward in the zoom history.
-  * Middle click zooms in, Shift+middle click zooms out (in addition to middle button drag which pans canvas).
-  * All zooming operations via mouse now preserve the point under cursor (no centering).
-  * Improvements in the Export dialog: the Browse button, helpful error messages, and even a progress bar. The dialog remembers and restores the export area and dpi settings.
-  * The fullscreen mode is implemented; press F11 to toggle.
-  * F12 temporarily hides all open dialogs; press F12 again to restore them.
-  * More screen real estate: you can now hide rulers (Ctrl+R) and scrollbars (Ctrl+B). These settings are remembered across sessions.
-  * All menus now have mnemonics.
-  * Many obsolete and confusing console debug messages removed, some of them reworded in plain English and displayed in the statusbar or (for important errors) in modal messageboxes.
-  * Many cosmetic improvements in the UI. 
+inkscape (0.38.1-3) unstable; urgency=low
 
-  * Inkscape is now built using a C++ compiler. More and more code is being translated from C to C++.
-  * In particular, we now use NR::Point, NR::Matrix and NR::Rect classes instead of the clunky old macros.
-  * We now have the beginnings of an Inkscape::URI class for working with URIs.
-  * Using Inkscape::URIReference, clipping paths, masks, and gradients are updated properly when their id is changed.
-  * Inkscape can use libgnomeprint 2.2 now (Note: it should print to the gnome default printer, but was not fully tested before the release)
-  * Massive cleanups, bugfixes, and trimming dead code. 
+  * move debian/menu to debian/inkscape.menu. This was needed because upstream
+    includes a slightly diffent inkscape.menu file. Thanks to Karsten Merker.
+  * upload sponsored by Karsten Merker
 
- -- Nathan Hurst <njh@mail.csse.monash.edu.au>  Tue, 3 Feb 2004 22:11:00 +1100
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Tue, 20 Apr 2004 18:44:45 +0200
 
-inkscape (0.36) unstable; urgency=high
+inkscape (0.38.1-2) unstable; urgency=low
 
-  * KDE / Qt code and dependencies removed.
-  * Preliminary support for doxygen
-  * Preliminary support for arrowheads on path ends
-  * SPGroups behave like layers if inkscape:groupmode is set to "layer"
-  * URI namespace set to http://www.inkscape.org/namespaces/inkscape
-  * Inkscape namespace implemented
-  * All warnings in g++ build process on Linux have been eliminated
-  * The bulk of patches posted to patch tracker have been incorporated
-  * Fixed: on quit, still says I have unsaved changes, even though I saved
-  * Fixed: default save as/save uses "SVG with xmlns:sodipodi namespace"
-  * Fixed: files were erroneously saved without the extension namespaces 
-  * "SVG with xmlns:sodipodi namespace" renamed to "SVG with extension namespaces"
-  * Inkscape manpage rewritten
-  * Replace the doc/keybindings.txt file with one from Wiki
+  * fixed wording of package description in debian/control
+    (thanks to Karsten Merker)
+  * upload sponsored by Karsten Merker
 
-  * BORKEN UI reorganization merged
-  * Fixed: Ruler coordinate system problem
-  * All dialogs are now unsinkable, closeable (ctrl-f4, ctrl-w), defocusable (esc, enter in textfields)
-  * All dialogs remember size and position across sessions
-  * Names of commands and dialogs unified
-  * Tab, Esc, ctrl-a in node editor now work
-  * Scrollwheel works correctly
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Mon, 19 Apr 2004 15:50:48 +0200
 
- -- Nathan Hurst <njh@mail.csse.monash.edu.au>  Wed, 12 Nov 2003 15:33:14 +1100
+inkscape (0.38.1-1) unstable; urgency=low
+
+  * New upstream release to fix two bugs itroduced in the flurry of last-day
+    activity.
+  * added my fix to the KEYBINDINGS-section in inkscape.1.in again
+  * upload sponsored by Guido Guenther <agx@debian.org> and
+    Karsten Merker <merker@debian.org>
+
+
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Mon, 12 Apr 2004 21:11:01 +0200
+
+inkscape (0.38-1) unstable; urgency=low
+
+  * New upstream release:
+    Main goal for this release was to fix as many bugs as possible. Apart from
+    that, some new features and usability enhancements were included. Have a
+    look at /usr/share/doc/inkscape/NEWS for more information.
+  * remove debian/inkview.1 since it was included upstream.
+  * added my fix to the KEYBINDINGS-section in inkscape.1.in again
+  * don't remove po/*.gmo in debian/rules any longer
+  * remove debian/examples and dh_installexamples
+  * upload sponsored by Guido Guenther <agx@debian.org> and
+    Karsten Merker <merker@debian.org>
+
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Thu,  8 Apr 2004 12:24:13 +0200
+
+inkscape (0.37-5) unstable; urgency=low
+
+  * remove Guido Guenther <agx@debian.org> from Uploaders
+  * insert a pair of #ifdef DEBUG_MARKERS ... #endif in
+    src/dialogs/stroke-style.cpp, sp_stroke_style_set_marker_buttons()
+    as suggested by
+    http://cvs.sourceforge.net/viewcvs.py/inkscape/inkscape/src/dialogs/stroke-style.cpp?r1=1.23&r2=1.24&hideattic=0
+    (closes: #241668)
+  * upload sponsored by Guido Guenther <agx@debian.org>
+
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Fri,  2 Apr 2004 19:09:03 +0200
+
+inkscape (0.37-4) unstable; urgency=low
+
+  * took updated po/es.po from upstream
+  * remove po/*.gmo in debian/rules
+  * added mime-type image/svg to debian/mime
+  * upload sponsored by Guido Guenther <agx@debian.org>
+
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Tue, 30 Mar 2004 11:20:18 +0200
+
+inkscape (0.37-3) unstable; urgency=low
+
+  * converted inkscape.png to debian/inkscape.xpm and use this icon in the
+    menus (Trying to avoid lintians menu-icon-not-in-xpm-format)
+  * use dh_installexamples correctly. inkscape can display them even if
+    they are gzipped. (Closes: #232254)
+  * upload sponsored by Guido Guenther <agx@debian.org>
+  * added manpage for inkview
+  * fixed KEYBINDINGS-section in inkscape.1
+  * added inkscape.applications to have an entry in nautilus' "open with
+    another application" menu. I still don't know how I get an entry in "open
+    with"
+
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Fri, 13 Feb 2004 01:15:37 +0100
+
+inkscape (0.37-2) unstable; urgency=low
+
+  * the ./intltool-* scripts need libxml-parser-perl.
+
+ -- Guido Guenther <agx@debian.org>  Wed, 11 Feb 2004 15:36:31 +0100
+
+inkscape (0.37-1) unstable; urgency=low
+
+  * new upstream version
+  * added libsigc++-1.2-dev to Build-Depends
+  * removed no more existing TODO from debian/docs
+  * upload sponsored by Guido Guenther <agx@debian.org>
+
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Tue, 10 Feb 2004 14:02:10 +0100
+
+inkscape (0.36-3) unstable; urgency=low
+
+  * enable installation of debian menus
+  * install examples to /usr/share/doc/inkscape/
+  * added mime-support
+
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Tue, 13 Jan 2004 11:36:43 +0100
+
+inkscape (0.36-2) unstable; urgency=low
+
+  * fix versioning in debian/changelog
+  * remove sodipodi changelog from debian/ directory
+  * add myself to uploaders
+
+ -- Guido Guenther <agx@debian.org>  Fri, 26 Dec 2003 23:01:02 +0100
+
+inkscape (0.36-1) unstable; urgency=low
+
+  * Initial release in Debian.  closes: #220795.
+  * Adopted package description from Nathan Hurst
+
+ -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Thu, 18 Dec 2003 12:36:30 +0100
 
 inkscape (0.35-1) unstable; urgency=high
 
