--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-07-29  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/desktop.h, src/sp-desktop-widget.h:
+	  Move SPDesktopWidget stuff from desktop.h to new file
+	  sp-desktop-widget.h.
+
+	* debian/*: Copy lots of changes from wolfi's official Debian package
+	  of inkscape.
+	  Also use separate builddir, which simplifies the `clean' target.
+
 2004-07-24  MenTaLguY  <mental@rydia.net>
 
 	* configure.in, src/Makefile.am, src/main.cpp, src/gc-core.h:
