--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2004-07-31  Ted Gould  <ted@gould.cx>
 
+	* src/extension/extension.cpp,
+	src/extension/implementation/implementation.cpp,
+	src/extension/implementation/implementation.h,
+	src/extension/implementation/script.cpp,
+	src/extension/implementation/script.h, src/extension/internal/eps-out.cpp,
+	src/extension/internal/eps-out.h:
+
+	Okay, changed the prefs_ prototypes to include which extension they are
+	working with. This should clean up some warnings before they become
+	problems later.
+
+2004-07-31  Ted Gould  <ted@gould.cx>
+
 	* src/print.cpp, src/extension/extension.cpp, src/extension/extension.h,
       src/extension/internal/eps-out.cpp, src/extension/internal/ps.cpp:
 
