--- a/debian/changelog
+++ b/debian/changelog
@@ -172,7 +172,7 @@ inkscape (0.36-1) unstable; urgency=low
 
  -- Wolfram Quester <wolfi@mittelerde.physik.uni-konstanz.de>  Thu, 18 Dec 2003 12:36:30 +0100
 
-inkscape (0.35-1) unstable; urgency=high
+inkscape (0.35-1) unstable; urgency=low
 
   * Initial release of the new code tree.
 
