--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/display/curve.cpp, src/display/curve.h:
+	  Greater conformance with CodingStyle.
+
 2004-07-31  Ted Gould  <ted@gould.cx>
 
 	* src/extension/extension.cpp,
@@ -14,7 +19,7 @@
 2004-07-31  Ted Gould  <ted@gould.cx>
 
 	* src/print.cpp, src/extension/extension.cpp, src/extension/extension.h,
-      src/extension/internal/eps-out.cpp, src/extension/internal/ps.cpp:
+	  src/extension/internal/eps-out.cpp, src/extension/internal/ps.cpp:
 
 	  Changed the get and set param prototypes so that they aren't overloaded
 	  anymore - this was flaky.  Also added a document to the prototype so
