--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-08-04  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/inkview.cpp (sp_svgview_main_key_press): Accept some common keys like PgUp, q.
+
 	* src/draw-context.cpp (fit_and_split):
 	  Slight simplification: don't handle impossible condition npoints < 2.
 	* src/proofs: Update accordingly.  (Also add some bezier-utils proofs.)
