--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-08-06  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* display/nr-arena-item.cpp, display/nr-arena-item.h:
+	  Add NR::Matrix version of nr_arena_item_set_transform.
+
 	* src/sp-item.cpp (partial_xform): Mark pointers as not written through.
 
 	* src/arc-context.cpp, src/draw-context.cpp, src/dyna-draw-context.cpp,
